@@ -271,6 +271,10 @@ class AgencyCommResult {
     _vpack = vpack;
   }
 
+  void toVelocyPack(VPackBuilder& builder) const;
+
+  VPackBuilder toVelocyPack() const;
+
  public:
   std::string _location;
   std::string _message;
@@ -698,5 +702,9 @@ class AgencyComm {
   bool shouldInitializeStructure();
 };
 }  // namespace arangodb
+
+namespace std {
+ostream& operator<<(ostream& o, arangodb::AgencyCommResult const& a);
+}
 
 #endif
